<?xml version="1.0"?>
<package>
  <name>nav_filter</name>
  <version>0.0.0</version>
  <description>The Navigation Filter package</description>

  <author email="rwatso12@gmail.com">Ryan Watson</author>
  <maintainer email="rwatso12@gmail.com">Ryan Watson</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_utils</build_depend>
  <build_depend>parameter_utils</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_utils</run_depend>
  <run_depend>parameter_utils</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf</run_depend>
</package>
